fixed button active state on tablet and mobile

--- a/src/theme/styles/global.scss
+++ b/src/theme/styles/global.scss
@@ -99,9 +99,11 @@ body:has(.disable-body-scroll) {
 @media (max-width: 1024px) {
 	.amplify-button--primary:hover {
 		background-color: var(--primary-color) !important;
+		border-color: var(--primary-color) !important;
 	}
 
 	.amplify-button--primary:active {
 		background-color: var(--primary-contrast-color) !important;
+		border-color: var(--primary-contrast-color) !important;
 	}
 }
